# RandomTerrain

./: CMakeLists.txt  RandomTerrain.cpp  RandomTerrain_kernel.cu
include/: cuda_noise.cuh  helper_cuda.h  helper_gl.h  helper_string.h  noise.cuh  util.h
shaders/: ocean.frag  ocean.vert  terrain.frag  terrain.vert
